<resources>
    <string name="app_name">Summer Body</string>
    <string name="welcome_label">Welcome back!</string>
    <string name="sign_up">Don\'t have an account? <b>Sign up!</b></string>
    <string name="please_signin">Please, sign in to continue</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="title_programs">Programs</string>
    <string name="sign_up_label">Let\'s get started!</string>
    <string name="create_account_label">Create an account to continue</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="error_empty_email">Please enter your email</string>
    <string name="error_mail_format">Please enter valid email</string>
    <string name="error_empty_pass">Please enter your password</string>
    <string name="already_have_acc">Already have an account? <b>Login here</b></string>
    <string name="btn_start_workout">Start workout</string>
    <string name="btn_next_workout">Next workout</string>
    <string name="btn_add_weight">New weight entry</string>
    <string name="btn_weight_history">Weight history</string>
    <string name="title_weight_tracker">Weight tracker</string>
    <string name="btn_add_measurements">New measurement entry</string>
    <string name="btn_measurement_history">Measurement history</string>
    <string name="title_measurement_tracker">Measurement tracker</string>
    <string name="btn_add_photo">New progress photo</string>
    <string name="title_photo_tracker">Photo tracker</string>
    <string name="hip_circumference">Enter hip circumference</string>
    <string name="enter_waist_circumference">Enter waist circumference</string>
    <string name="enter_breast_circumference">Enter breast circumference</string>
    <string name="add_measurements">Add measurements</string>

</resources>
