<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_all"
        android:src="?attr/homeAsUpIndicator"
        android:background="?attr/selectableItemBackgroundBorderless"/>
    <ImageView
        android:id="@+id/heartbeat_icon"
        android:layout_width="@dimen/main_thumbnailsize"
        android:layout_height="@dimen/main_thumbnailsize"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:src="@drawable/heartbeat_ico"
        android:tint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />
    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_layout"
        app:layout_constraintTop_toBottomOf="@id/heartbeat_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/label_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:text="@string/please_signin"
        android:textColor="@color/gray"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintTop_toBottomOf="@+id/welcome_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_sign_in"
        android:layout_margin="@dimen/margin_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:endIconMode="clear_text"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:hint="@string/hint_username">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/usernameField"
        app:layout_constraintLeft_toLeftOf="@id/usernameField"
        android:layout_margin="@dimen/margin_layout"
        android:paddingRight="@dimen/padding_all"
        android:paddingLeft="@dimen/padding_all"
        app:endIconMode="password_toggle"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_signin"
        android:textSize="@dimen/label_text_size"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button_pink"
        android:text="@string/btn_sign_in"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_layout"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/label_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_bottom"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>